# datahound

./: .gitignore  CHANGELOG  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: unit-tests.yaml
datahound/: __init__.py  connectors.py  encoders.py  exceptions.py  execution.py  factories.py  managers.py  setup.py
datahound/connectors/: __init__.py  mariadb.py
datahound/tests/: DataProviderBase.py  __init__.py  dataproviderbase_testcase.py
datahound/tests/db/: error_db.txt  tests.sqlite3
